# ros-utils

./: README.md
.github/: labeler.yml  (+2 more)
camera_throttle/: CHANGELOG.rst  CMakeLists.txt  nodelets.xml  package.xml
camera_throttle/src/: camera_throttle.cpp  rgbd_camera_publisher.cpp  rgbd_camera_subscriber.cpp  rgbd_image_transport.cpp  rgbd_throttle.cpp
cras_bag_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cras_bag_tools/config/: add_subtitles.yaml  anonymize.yaml  camera_mask_marv.yaml  camera_mask_tradr.yaml  compress_cams.yaml  decompress_cams.yaml  depth_image_preview.yaml  diagnostics.yaml  export_camera_info.yaml  export_tf.yaml  fix_camera_info.yaml  fix_extrinsics_ikalibr.yaml  fix_joint_states.yaml  fix_marv_flippers.yaml  fix_nifti_joint_states.yaml  fix_spot_cams.yaml  no_sensors.yaml  no_sensors_simple.yaml  recompress_cams.yaml  recompute_tf.yaml  spot_compress_cams.yaml  tf.yaml
cras_bag_tools/cras_bag_tools/: __init__.py  bag_filter.py  fix_msg_defs.py  message_filter.py  message_filters.py  topic_set.py  tqdm_bag.py
cras_bag_tools/doc/: conf.py  cras_bag_tools.rst  index.rst
cras_bag_tools/scripts/: bag_fix_msg_defs  extract_images  extract_pcd  filter_bag  fix_msg_defs  merge_bag  size_per_topic
cras_cpp_common/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  rosdoc.yaml
cras_cpp_common/cfg/: FilterChain.cfg
cras_cpp_common/cmake/: cras_cpp_common-extras.cmake.develspace.in  cras_cpp_common-extras.cmake.installspace.in  cras_cpp_common-node_from_nodelet.cmake.em  designated_initializers_try_compile.cpp  from_chars_try_compile.cpp  node_from_nodelet.cpp.in
cras_cpp_common/nodes/: nodelet_manager_sharing_tf_buffer.cpp
cras_cpp_common/src/: c_api.cpp  cloud.cpp  diag_utils.cpp  filter_chain.cpp  filter_utils.cpp  log_utils.cpp  nodelet_utils.cpp  qos.cpp  rate_limiter.cpp  repeater.cpp  resettable.cpp  string_utils.cpp  tf2_sensor_msgs.cpp  tf2_utils.cpp  thread_utils.cpp  time_utils.cpp  type_utils.cpp  urdf_utils.cpp
cras_cpp_common/test/: get_param_test.inc  log_appender.inc  subscription_callbacks.inc  test_c_api.cpp  test_cloud.cpp  test_diag_utils.cpp  test_diag_utils.test  test_filter_base.cpp  test_filter_base.test  test_filter_chain.cpp  test_filter_chain_nodelet.cpp  test_filter_chain_nodelet.test  test_filter_chain_nodelet.yaml  test_log_utils.cpp  test_math_utils.cpp  test_node_utils.cpp  test_node_utils.test  test_node_utils_diagnostics.cpp  test_node_utils_get_param.cpp  test_node_utils_node_with_master.cpp  test_node_utils_node_without_master.cpp  test_nodelet_aware_tf_buffer.cpp  test_nodelet_diagnostics.cpp  test_nodelet_get_param.cpp  test_nodelet_get_param.test  test_nodelet_log_macros.cpp  test_nodelet_manager.cpp  test_nodelet_manager.test  test_nodelet_utils.test  test_nodelet_with_shared_tf_buffer.cpp  test_param_utils.cpp  test_param_utils.test  test_params.yaml  test_pool_allocator.cpp  test_rate_limiter.cpp  test_resettable.cpp  test_resettable.test  test_set_utils.cpp  test_small_map.cpp  test_stateful_nodelet.cpp  (+11 more)
cras_docs_common/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cras_lint/: CHANGELOG.rst  CMakeLists.txt  README.md  cras_lint-extras.cmake  package.xml
cras_lint/cmake/: cras_lint.cmake
cras_lint/config/: cras_style_uncrustify.cfg
cras_nodelet_topic_tools/: CMakeLists.txt  nodelet.xml  package.xml
cras_nodelet_topic_tools/src/: relay.cpp  throttle.cpp  throttle_messages.cpp
cras_py_common/: CHANGELOG.rst  CMakeLists.txt  README.md  hack_frame_id  package.xml  setup.py
cras_py_common/doc/: Makefile  cras.rst  index.rst  modules.rst
cras_py_common/src/: distortion_models.cpp  image_encodings.cpp  rosconsole.cpp
cras_py_common/test/: publish_static_tfs.py  test_ctypes_utils.py  test_distortion_models.py  test_geometry_utils.py  test_heap.py  test_image_encodings.py  test_log_utils.py  test_log_utils.test  test_message_utils.py  test_node_utils.py  test_node_utils.test  test_param_utils.py  test_param_utils.test  test_params.yaml  test_plugin_utils.py  test_python_utils.py  test_static_tf_broadcaster.py  test_static_transform_broadcaster.test  test_string_utils.py  test_test_utils.py  test_time_utils.py  test_topic_utils.py  test_topic_utils.test  test_type_utils.py
cras_topic_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet.xml  package.xml
cras_topic_tools/data/: disable_string.bag  zero_twist.bag  zero_twist_stamped.bag
cras_topic_tools/launch/: joy_repeater_test.launch  repeater_test.launch
cras_topic_tools/nodes/: filter  mux_replay  repeat
cras_topic_tools/src/: change_header.cpp  count_messages.cpp  generic_lazy_pubsub.cpp  heartbeat.cpp  joy_repeater.cpp  lazy_subscriber.cpp  priority_mux.cpp  priority_mux_base.cpp  relay.cpp  repeat.cpp  shape_shifter.cpp  throttle_messages.cpp
cras_topic_tools/test/: test_change_header  test_change_header.test  test_change_header_nodelet.test  test_count_messages  test_count_messages.test  test_filter  test_filter.test  test_generic_lazy_pubsub.cpp  test_generic_lazy_pubsub.test  test_heartbeat  test_heartbeat.test  test_heartbeat_nodelet.test  test_lazy_pubsub.cpp  test_lazy_subscriber.cpp  test_lazy_subscriber.test  test_mux_replay  test_mux_replay.test  test_mux_replay_loop  test_mux_replay_loop.test  test_priority_mux  test_priority_mux.test  test_priority_mux.yaml  test_priority_mux_base.cpp  test_relay  test_relay.test  test_relay_nodelet.test  test_repeat  test_repeat.test  test_repeat_nodelet.test  test_repeater_discard_older  test_repeater_max_age  test_repeater_max_repeats  test_shape_shifter.cpp  test_throttle  test_throttle.test  test_throttle_nodelet.test
image_transport_codecs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  codecs.xml  package.xml  rosdoc.yaml  setup.py
image_transport_codecs/doc/: conf.py  modules.rst
image_transport_codecs/src/: image_transport_codec.cpp  image_transport_codecs.cpp  parse_compressed_format.cpp
map_exploration/: CMakeLists.txt  package.xml
tf_static_publisher/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+251 files in other folders)
