<?xml version="1.0"?>
<package format="3">
  <name>cras_bag_tools</name>
  <version>2.3.8</version>
  <description>Various utilities to work with bag files</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_bag_tools</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>image_transport_codecs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-marisa</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-marisa</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tqdm</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tqdm</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roslib</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>

  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
