<?xml version="1.0"?>
<package format="3">
  <name>cras_bag_tools</name>
  <version>2.5.1</version>
  <description>Various utilities to work with bag files</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_bag_tools</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

<!--  <exec_depend>cras_py_common</exec_depend>-->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
<!--  <exec_depend>image_transport_codecs</exec_depend>-->
  <exec_depend>python3-marisa</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>cras_lint</test_depend>

<!--  <doc_depend>cras_docs_common</doc_depend>-->
<!--  <doc_depend>rosdoc_lite</doc_depend>-->

  <export>
<!--    <cras_bag_tools filters="cras_bag_tools.message_filters" />-->
    <build_type>ament_cmake</build_type>
  </export>
</package>
