<?xml version="1.0"?>
<package format="3">
  <name>cras_bag_tools</name>
  <version>2.5.1</version>
  <description>Various utilities to work with bag files</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_bag_tools</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>camera_calibration_parsers</exec_depend>
  <exec_depend>cras_py_common</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>genpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport_codecs</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-imageio</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-imageio</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-marisa</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-marisa</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-imaging</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-skimage</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-skimage</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tqdm</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tqdm</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-typing</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>

  <doc_depend>cras_docs_common</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <cras_bag_tools filters="cras_bag_tools.message_filters" />
  </export>
</package>
